// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should render correctly when given a table as the content 1`] = `
<DocumentFragment>
  <div
    class="govuk-tabs"
    data-module="govuk-tabs"
  >
    <h2
      class="govuk-tabs__title"
    >
      Disruptions
    </h2>
    <ul
      class="govuk-tabs__list"
    >
      <li
        class="govuk-tabs__list-item govuk-tabs__list-item--selected"
      >
        <a
          class="govuk-tabs__tab"
          href="#live"
        >
          Live
        </a>
      </li>
      <li
        class="govuk-tabs__list-item"
      >
        <a
          class="govuk-tabs__tab"
          href="#upcoming"
        >
          Upcoming
        </a>
      </li>
    </ul>
    <div
      class="govuk-tabs__panel"
      id="live"
    >
      <table
        class="govuk-table"
      >
        <caption
          class="govuk-table__caption govuk-table__caption--l"
        >
          Live disruptions
        </caption>
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              ID
            </th>
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              Summary
            </th>
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              Affected dates
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              <a
                class="govuk-link"
                href="/dashboard"
              >
                1234
              </a>
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Test summary
            </td>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/01/2023 onwards
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              <a
                class="govuk-link"
                href="/dashboard"
              >
                3211
              </a>
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Test summary
            </td>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              02/01/2023 - 02/02-2024
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="govuk-tabs__panel govuk-tabs__panel--hidden"
      id="upcoming"
    >
      <table
        class="govuk-table"
      >
        <caption
          class="govuk-table__caption govuk-table__caption--l"
        >
          Live disruptions
        </caption>
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              ID
            </th>
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              Summary
            </th>
            <th
              class="govuk-table__header align-middle px-2"
              scope="col"
            >
              Affected dates
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              <a
                class="govuk-link"
                href="/dashboard"
              >
                1234
              </a>
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Test summary
            </td>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/01/2023 onwards
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              <a
                class="govuk-link"
                href="/dashboard"
              >
                3211
              </a>
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Test summary
            </td>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              02/01/2023 - 02/02-2024
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > should render correctly when given simple text as the content 1`] = `
<DocumentFragment>
  <div
    class="govuk-tabs"
    data-module="govuk-tabs"
  >
    <h2
      class="govuk-tabs__title"
    >
      Disruptions
    </h2>
    <ul
      class="govuk-tabs__list"
    >
      <li
        class="govuk-tabs__list-item govuk-tabs__list-item--selected"
      >
        <a
          class="govuk-tabs__tab"
          href="#live"
        >
          Live
        </a>
      </li>
      <li
        class="govuk-tabs__list-item"
      >
        <a
          class="govuk-tabs__tab"
          href="#upcoming"
        >
          Upcoming
        </a>
      </li>
    </ul>
    <div
      class="govuk-tabs__panel"
      id="live"
    >
      <h1>
        Hello
      </h1>
    </div>
    <div
      class="govuk-tabs__panel govuk-tabs__panel--hidden"
      id="upcoming"
    >
      <h1>
        Test
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
